syntax = "proto3";

package go_devops_advanced_diploma;

option go_package = "github.com/Jay-T/go-devops-advanced-diploma/internal/pb";

import "auth.proto";
import "google/protobuf/empty.proto";

service Authentication {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

service AnythingElse {
    rpc GetUserInfo(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}